--- a/JsonPad/Views/MainWindow.axaml
+++ b/JsonPad/Views/MainWindow.axaml
@@ -3,15 +3,14 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="clr-namespace:JsonPad"
-    xmlns:vm="using:JsonPad.ViewModels"
+    xmlns:viewModels="using:JsonPad.ViewModels"
+    xmlns:pages="clr-namespace:JsonPad.Views.Pages"
+    x:DataType="viewModels:MainWindowModel"
+    d:DataContext="{viewModels:MainWindowModel}"
+    x:CompileBindings="True"
     Title="JsonPad"
-    d:DesignHeight="650"
-    d:DesignWidth="1200"
-    Width="750"
-    Height="450"
-    Icon="/Assets/avalonia-logo.ico"
-    mc:Ignorable="d">
-    <views:MainView />
+    Width="960"
+    Height="580"
+    Icon="/Assets/avalonia-logo.ico">
+    <pages:MainView />
 </Window>
