[Feat] > Property page

--- a/JsonPad/Controls/NumberedTextBox.axaml
+++ b/JsonPad/Controls/NumberedTextBox.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             x:Name="NTextBox"
              x:Class="JsonPad.Controls.NumberedTextBox">
     <ScrollViewer
         VerticalScrollBarVisibility="Auto"
@@ -16,13 +17,11 @@
                     Grid.Column="0"
                     CornerRadius="0"
                     HorizontalContentAlignment="Right"
-                    FontSize="16"
                     IsEnabled="False"
                     BorderThickness="0"
                     FontFamily="Consolas" />
             </Border>
             <TextBox x:Name="TextPanel" Grid.Column="1" TextChanged="TextBox_TextChanged"
-                     FontSize="16"
                      CornerRadius="0"
                      BorderThickness="0"
                      ScrollViewer.VerticalScrollBarVisibility="Disabled"
