--- a/JsonPad/Views/Pages/JsonView.axaml
+++ b/JsonPad/Views/Pages/JsonView.axaml
@@ -11,7 +11,12 @@
         <viewModels:JsonViewModel />
     </Design.DataContext>
 
-    <Grid ColumnDefinitions="* *">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" MinWidth="300"/>
+            <ColumnDefinition Width="2*" MinWidth="200"/>
+            <ColumnDefinition Width="*" MaxWidth="300" MinWidth="200"/>
+        </Grid.ColumnDefinitions>
         <Border 
             Grid.Column="0" 
             Grid.Row="0">
@@ -20,72 +25,197 @@
                     BorderThickness="0 1 1 1"
                     BorderBrush="#dadada"
                     Background="#f6f6f6">
-                    <StackPanel
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                        <Button
-                            Margin="2"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Command="{Binding CompressJsonCommand}">
-                            <Svg Css="path {fill:#66CCFF;}" Path="/Resources/Svgs/compress.svg" />
-                        </Button>
-                        <Button
-                            Margin="2"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Command="{Binding FormatJsonCommand}">
-                            <Svg Css="path {fill:#66CCFF;}" Path="/Resources/Svgs/format.svg" />
-                        </Button>
-                    </StackPanel>
+                    <Grid ColumnDefinitions="* *">
+                        <StackPanel 
+                            Grid.Column="0"                            
+                            Orientation="Horizontal"
+                            HorizontalAlignment="Left">
+
+                        </StackPanel>
+                        <StackPanel
+                            Grid.Column="1"
+                            Orientation="Horizontal"
+                            HorizontalAlignment="Right">
+                            <Button
+                                Margin="2"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding CompressJsonCommand}">
+                                <Svg Css="path {fill:#66CCFF;}" Path="/Resources/Svgs/compress.svg" />
+                            </Button>
+                            <Button
+                                Margin="2"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding FormatJsonCommand}">
+                                <Svg Css="path {fill:#66CCFF;}" Path="/Resources/Svgs/format.svg" />
+                            </Button>
+                            <Border 
+                                BorderThickness="0 0 1 0" 
+                                Margin="4" 
+                                BorderBrush="#dadada"/>
+                            <Button
+                                Margin="2"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding FontSizeUpCommand}">
+                                <Svg Css="path {fill:#5a4a54;}" Path="/Resources/Svgs/font_size_up.svg" />
+                            </Button>
+                            <Button
+                                Margin="2"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding FontSizeDownCommand}">
+                                <Svg Css="path {fill:#5a4a54;}" Path="/Resources/Svgs/font_size_down.svg" />
+                            </Button>
+
+
+                        </StackPanel>
+                    </Grid>
                 </Border>
                 <Border
                     Grid.Row="1"
-                    BorderThickness="0 0 1 1"
+                    BorderThickness="0 0 1 0"
                     BorderBrush="#dadada">
                     <controls:NumberedTextBox
+                        FontSize="{Binding FontSize}"
                         Text="{Binding JsonText, Mode=TwoWay}" />
                 </Border>
                 
                 <Border
                     Grid.Row="2"
-                    BorderThickness="0 0 1 1"
+                    BorderThickness="0 1 1 1"
                     BorderBrush="#dadada"
                     Background="#f6f6f6"
                     >
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock
-                            Margin="10 0"
-                            FontSize="12"
-                            VerticalAlignment="Center"
-                            Text="{Binding InfoText}" />
-                    </StackPanel>
+                    <Grid ColumnDefinitions="* *">
+                        <StackPanel 
+                            Grid.Column="0"
+                            Orientation="Horizontal">
+                            <TextBlock
+                                Margin="10 0"
+                                FontSize="12"
+                                VerticalAlignment="Center"
+                                Text="{Binding InfoText}" />
+                        </StackPanel>
+                        <StackPanel 
+                            HorizontalAlignment="Right"
+                            Grid.Column="1"
+                            Orientation="Horizontal">
+                        </StackPanel>
+                    </Grid>
                 </Border>
             </Grid>
 
         </Border>
-
-        
         <Border
             BorderBrush="#dadada"
-            BorderThickness="0 1 0 1"
             Grid.Column="1">
-            <TreeView
-                BorderThickness="0"
-                FontSize="16"
-                AutoScrollToSelectedItem="False"
-                ItemsSource="{Binding NodeTree}">
-                <TreeView.ItemTemplate>
-                    <TreeDataTemplate ItemsSource="{Binding Children}">
-                        <Border
-                            BorderThickness="1">
-                            <TextBlock
-                                TextWrapping="Wrap"
-                                Text="{Binding Name}" />
-                        </Border>
-                    </TreeDataTemplate>
-                </TreeView.ItemTemplate>
-            </TreeView>
+            <Grid RowDefinitions="30 * 25">
+                <Border
+                    BorderThickness="0 1 1 1"
+                    BorderBrush="#dadada"
+                    Background="#f6f6f6">
+                    <StackPanel
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right">
+                    </StackPanel>
+                </Border>
+                <TreeView
+                    Grid.Row="1"
+                    BorderBrush="#dadada"
+                    BorderThickness="0 0 1 0"
+                    FontSize="16"
+                    AutoScrollToSelectedItem="False"
+                    SelectedItem="{Binding SelectNode}"
+                    ItemsSource="{Binding NodeTree}">
+                    <TreeView.ItemTemplate>
+                        <TreeDataTemplate ItemsSource="{Binding Children}">
+                            <Border
+                                BorderThickness="1">
+                                <TextBlock
+                                    TextWrapping="Wrap"
+                                    Text="{Binding Name}" />
+                            </Border>
+                        </TreeDataTemplate>
+                    </TreeView.ItemTemplate>
+                </TreeView>
+                
+                <Border
+                    Grid.Row="2"
+                    BorderThickness="0 1 1 1"
+                    BorderBrush="#dadada"
+                    Background="#f6f6f6"
+                >
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock
+                            Foreground="Brown"
+                            Margin="10 0"
+                            FontSize="12"
+                            VerticalAlignment="Center"
+                            Text="{Binding WarningText}" />
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
+        <Border
+            BorderBrush="#dadada"
+            Grid.Column="2">
+            <Grid RowDefinitions="30 * 25">
+                <Border
+                    BorderThickness="0 1 0 1"
+                    BorderBrush="#dadada"
+                    Background="#f6f6f6">
+                    <StackPanel
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right">
+                    </StackPanel>
+                </Border>
+                
+                <ListBox
+                    BorderBrush="#dadada"
+                    FontSize="15"
+                    ItemsSource="{Binding JsonData,Mode=TwoWay}"
+                    BorderThickness="0"
+                    Grid.Row="1">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                VerticalAlignment="Center"
+                                BorderBrush="#dadada"
+                                BorderThickness="1">
+                                <Grid ColumnDefinitions="100 *">
+                                    <Border
+                                        Background="#dadada"
+                                        BorderThickness="0">
+                                        <TextBlock 
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Left"
+                                            Text="{Binding Key}" />
+                                    </Border>
+                                    <TextBox 
+                                        Grid.Column="1" 
+                                        BorderBrush="#dadada"
+                                        BorderThickness="0"
+                                        TextWrapping="NoWrap"
+                                        Text="{Binding Value}"/>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                
+                <Border
+                    Grid.Row="2"
+                    BorderThickness="0 1 0 1"
+                    BorderBrush="#dadada"
+                    Background="#f6f6f6"
+                >
+                    <StackPanel Orientation="Horizontal">
+  
+                    </StackPanel>
+                </Border>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
