--- a/JsonPad/App.axaml
+++ b/JsonPad/App.axaml
@@ -6,6 +6,7 @@
     
     <Application.Styles>
         <SimpleTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Simple.xaml"/>
     </Application.Styles>
     
     <Application.Resources>
