--- a/JsonPad/Views/Pages/JsonView.axaml
+++ b/JsonPad/Views/Pages/JsonView.axaml
@@ -13,12 +13,12 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*" MinWidth="300"/>
-            <ColumnDefinition Width="2*" MinWidth="200"/>
-            <ColumnDefinition Width="*" MaxWidth="300" MinWidth="200"/>
+            <ColumnDefinition Width="3*" MinWidth="300" />
+            <ColumnDefinition Width="2*" MinWidth="300" />
+            <ColumnDefinition Width="2*" MaxWidth="500" MinWidth="300" />
         </Grid.ColumnDefinitions>
-        <Border 
-            Grid.Column="0" 
+        <Border
+            Grid.Column="0"
             Grid.Row="0">
             <Grid RowDefinitions="30 * 25">
                 <Border
@@ -26,8 +26,8 @@
                     BorderBrush="#dadada"
                     Background="#f6f6f6">
                     <Grid ColumnDefinitions="* *">
-                        <StackPanel 
-                            Grid.Column="0"                            
+                        <StackPanel
+                            Grid.Column="0"
                             Orientation="Horizontal"
                             HorizontalAlignment="Left">
 
@@ -50,10 +50,10 @@
                                 Command="{Binding FormatJsonCommand}">
                                 <Svg Css="path {fill:#66CCFF;}" Path="/Resources/Svgs/format.svg" />
                             </Button>
-                            <Border 
-                                BorderThickness="0 0 1 0" 
-                                Margin="4" 
-                                BorderBrush="#dadada"/>
+                            <Border
+                                BorderThickness="0 0 1 0"
+                                Margin="4"
+                                BorderBrush="#dadada" />
                             <Button
                                 Margin="2"
                                 Background="Transparent"
@@ -81,15 +81,14 @@
                         FontSize="{Binding FontSize}"
                         Text="{Binding JsonText, Mode=TwoWay}" />
                 </Border>
-                
+
                 <Border
                     Grid.Row="2"
                     BorderThickness="0 1 1 1"
                     BorderBrush="#dadada"
-                    Background="#f6f6f6"
-                    >
+                    Background="#f6f6f6">
                     <Grid ColumnDefinitions="* *">
-                        <StackPanel 
+                        <StackPanel
                             Grid.Column="0"
                             Orientation="Horizontal">
                             <TextBlock
@@ -98,7 +97,7 @@
                                 VerticalAlignment="Center"
                                 Text="{Binding InfoText}" />
                         </StackPanel>
-                        <StackPanel 
+                        <StackPanel
                             HorizontalAlignment="Right"
                             Grid.Column="1"
                             Orientation="Horizontal">
@@ -140,13 +139,12 @@
                         </TreeDataTemplate>
                     </TreeView.ItemTemplate>
                 </TreeView>
-                
+
                 <Border
                     Grid.Row="2"
                     BorderThickness="0 1 1 1"
                     BorderBrush="#dadada"
-                    Background="#f6f6f6"
-                >
+                    Background="#f6f6f6">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock
                             Foreground="Brown"
@@ -171,48 +169,40 @@
                         HorizontalAlignment="Right">
                     </StackPanel>
                 </Border>
-                
-                <ListBox
-                    BorderBrush="#dadada"
+
+                <DataGrid
                     FontSize="15"
-                    ItemsSource="{Binding JsonData,Mode=TwoWay}"
+                    GridLinesVisibility="All"
+                    AreRowGroupHeadersFrozen="True"
+                    HeadersVisibility="None"
+                    HorizontalGridLinesBrush="#dadada"
+                    VerticalGridLinesBrush="#dadada"
                     BorderThickness="0"
+                    RowBackground="Transparent"
+                    ItemsSource="{Binding JsonData}"
                     Grid.Row="1">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Border
-                                VerticalAlignment="Center"
-                                BorderBrush="#dadada"
-                                BorderThickness="1">
-                                <Grid ColumnDefinitions="100 *">
-                                    <Border
-                                        Background="#dadada"
-                                        BorderThickness="0">
-                                        <TextBlock 
-                                            VerticalAlignment="Center"
-                                            HorizontalAlignment="Left"
-                                            Text="{Binding Key}" />
-                                    </Border>
-                                    <TextBox 
-                                        Grid.Column="1" 
-                                        BorderBrush="#dadada"
-                                        BorderThickness="0"
-                                        TextWrapping="NoWrap"
-                                        Text="{Binding Value}"/>
-                                </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            Header="Key"
+                            IsReadOnly="True"
+                            Width="1*"
+                            MaxWidth="100"
+                            Binding="{Binding Key}" />
+                        <DataGridTextColumn
+                            Header="Value"
+                            IsReadOnly="False"
+                            Width="1*"
+                            Binding="{Binding Value}" />
+                    </DataGrid.Columns>
+                </DataGrid>
+
                 <Border
                     Grid.Row="2"
                     BorderThickness="0 1 0 1"
                     BorderBrush="#dadada"
-                    Background="#f6f6f6"
-                >
+                    Background="#f6f6f6">
                     <StackPanel Orientation="Horizontal">
-  
+
                     </StackPanel>
                 </Border>
             </Grid>
